fix: supabase_ref precedence - remove empty default, move auto-detect before Nginx

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -114,6 +114,35 @@
         global: true
         state: present
 
+    # ── Auto-detect supabase_ref from server .env.local ────
+    # Runs BEFORE Nginx template so /storage/ proxy is configured correctly.
+    # After Setup Wizard runs, .env.local contains SUPABASE_URL.
+    # Extract the project ref so Nginx can proxy /storage/ → Supabase.
+    # Inventory supabase_ref takes priority (explicit override).
+    - name: Check for existing .env.local on server
+      tags: [deploy, nginx]
+      ansible.builtin.stat:
+        path: "{{ app_path }}/backend/.env.local"
+      register: env_local_file
+
+    - name: Read SUPABASE_URL from .env.local
+      tags: [deploy, nginx]
+      ansible.builtin.shell: |
+        grep -oP 'SUPABASE_URL=https://\K[^.]+' {{ app_path }}/backend/.env.local
+      register: detected_ref
+      changed_when: false
+      failed_when: false
+      when: env_local_file.stat.exists
+
+    - name: Set supabase_ref from .env.local (if not in inventory)
+      tags: [deploy, nginx]
+      ansible.builtin.set_fact:
+        supabase_ref: "{{ detected_ref.stdout | trim }}"
+      when: >
+        (supabase_ref is not defined or supabase_ref == '')
+        and env_local_file.stat.exists
+        and detected_ref.stdout | default('') | trim != ''
+
     # ── SSL (Cloudflare Origin Certificate — wildcard) ─────
     # SSL certs MUST be deployed BEFORE Nginx config, because nginx -t
     # will fail if the config references cert files that don't exist.
@@ -202,34 +231,6 @@
     # ═════════════════════════════════════════════════════════════════════════
     # DEPLOY — Clone, install, build, restart
     # ═════════════════════════════════════════════════════════════════════════
-
-    # ── Auto-detect supabase_ref from server .env.local ────
-    # After Setup Wizard runs, .env.local contains SUPABASE_URL.
-    # Extract the project ref so Nginx can proxy /storage/ → Supabase.
-    # Inventory supabase_ref takes priority (explicit override).
-    - name: Check for existing .env.local on server
-      tags: [deploy, nginx]
-      ansible.builtin.stat:
-        path: "{{ app_path }}/backend/.env.local"
-      register: env_local_file
-
-    - name: Read SUPABASE_URL from .env.local
-      tags: [deploy, nginx]
-      ansible.builtin.shell: |
-        grep -oP 'SUPABASE_URL=https://\K[^.]+' {{ app_path }}/backend/.env.local
-      register: detected_ref
-      changed_when: false
-      failed_when: false
-      when: env_local_file.stat.exists
-
-    - name: Set supabase_ref from .env.local (if not in inventory)
-      tags: [deploy, nginx]
-      ansible.builtin.set_fact:
-        supabase_ref: "{{ detected_ref.stdout | trim }}"
-      when: >
-        (supabase_ref is not defined or supabase_ref == '')
-        and env_local_file.stat.exists
-        and detected_ref.stdout | default('') | trim != ''
 
     # ── Clone / pull repository ────────────────────────────
     - name: Clone or update repository
