--- a/nginx/tienda.conf.template
+++ b/nginx/tienda.conf.template
@@ -123,6 +123,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+
+        # SPA fallback: Vite preview 404s on client-side routes (/product/30, etc.)
+        # Intercept and serve index.html so React Router handles the route
+        proxy_intercept_errors on;
+        error_page 404 = @spa_fallback;
+    }
+
+    # SPA fallback handler — serves index.html for unknown routes
+    location @spa_fallback {
+        proxy_pass http://127.0.0.1:{{FRONTEND_PORT}}/index.html;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
     }
 
     # --- Frontend Static Build (alternativa sin Vite preview) ---
@@ -241,6 +253,17 @@ server {
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
 #         proxy_cache_bypass $http_upgrade;
+#
+#         # SPA fallback
+#         proxy_intercept_errors on;
+#         error_page 404 = @spa_fallback;
+#     }
+#
+#     # SPA fallback handler
+#     location @spa_fallback {
+#         proxy_pass http://127.0.0.1:{{FRONTEND_PORT}}/index.html;
+#         proxy_http_version 1.1;
+#         proxy_set_header Host $host;
 #     }
 # }
 
@@ -336,5 +359,16 @@ server {
 #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 #         proxy_set_header X-Forwarded-Proto $scheme;
 #         proxy_cache_bypass $http_upgrade;
+#
+#         # SPA fallback
+#         proxy_intercept_errors on;
+#         error_page 404 = @spa_fallback;
+#     }
+#
+#     # SPA fallback handler
+#     location @spa_fallback {
+#         proxy_pass http://127.0.0.1:{{FRONTEND_PORT}}/index.html;
+#         proxy_http_version 1.1;
+#         proxy_set_header Host $host;
 #     }
 # }
