--- a/docker/nginx-proxy.conf
+++ b/docker/nginx-proxy.conf
@@ -2,9 +2,10 @@
 # Nginx reverse proxy — entry point for Docker deployment
 # =============================================================================
 # Routes:
-#   /api/*   → backend:5001   (Express API)
-#   /p/*     → backend:5001   (social sharing / OG meta)
-#   /*       → frontend:80    (Vite SPA via nginx-frontend.conf)
+#   /api/*      → backend:5001   (Express API)
+#   /storage/*  → backend:5001   (image storage proxy)
+#   /p/*        → backend:5001   (social sharing / OG meta)
+#   /*          → frontend:80    (Vite SPA via nginx-frontend.conf)
 # =============================================================================
 
 upstream backend {
@@ -36,6 +37,19 @@ server {
         proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
         proxy_read_timeout 60s;
+    }
+
+    # ── Image storage → backend ────────────────────────────
+    location /storage/ {
+        proxy_pass         http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header   Host              $host;
+        proxy_set_header   X-Real-IP         $remote_addr;
+        proxy_set_header   X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        # Cache images at CDN / browser level
+        proxy_cache_valid  200 7d;
+        expires            7d;
     }
 
     # ── Social sharing OG meta → backend ──────────────────
