infra: OCI Terraform config + Docker deploy script + cleanup old database.js

--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,9 @@ backend/data/*.json
 *.orig
 
 # Terraform — state y credenciales (NUNCA subir)
-terraform/.terraform/
-terraform/.terraform.lock.hcl
-terraform/terraform.tfstate
-terraform/terraform.tfstate.backup
-terraform/*.tfvars
-!terraform/terraform.tfvars.example
+terraform/**/.terraform/
+terraform/**/.terraform.lock.hcl
+terraform/**/terraform.tfstate
+terraform/**/terraform.tfstate.backup
+terraform/**/*.tfvars
+!terraform/**/terraform.tfvars.example
