--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -41,9 +41,9 @@ COPY docker/nginx-frontend.conf /etc/nginx/conf.d/default.conf
 # Copy built static files from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Health check: verify Nginx serves the SPA
+# Health check: verify Nginx serves the SPA (curl is available in nginx:alpine)
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
+    CMD curl -f http://localhost:80/ > /dev/null 2>&1 || exit 1
 
 EXPOSE 80
 
