--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -51,9 +51,9 @@ USER app
 
 WORKDIR /app/backend
 
-# Health check: verify Express responds
+# Health check: verify Express responds (use 127.0.0.1 to avoid IPv6 issues)
 HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-5001}/api/products || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://127.0.0.1:${PORT:-5001}/api/products || exit 1
 
 EXPOSE 5001
 
