feat: Ansible Docker playbook - automated Docker Compose deployment

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -47,6 +47,20 @@ all:
           ssl_mode: full_strict
           app_branch: main
 
+    # ── DOCKER (Docker Compose with PostgreSQL) ────────────
+    # Used by playbook-docker.yml — full stack in containers
+    docker:
+      hosts:
+        test-1:
+          ansible_host: 129.213.145.236
+          ansible_user: ubuntu
+          ansible_ssh_private_key_file: ~/.ssh/oci_test
+          app_branch: main
+          # Optional overrides per host:
+          # docker_pg_password: my_secure_password
+          # email_user: user@gmail.com
+          # email_pass: app_password
+
     # ── STAGING (descomenta cuando tengas un server de staging) ─
     # staging:
     #   hosts:
