--- a/ansible/playbook-docker.yml
+++ b/ansible/playbook-docker.yml
@@ -89,6 +89,42 @@
       ansible.builtin.command: docker compose version
       changed_when: false
 
+    # ── Open firewall ports (iptables) ────────────────────
+    - name: Open HTTP port 80 in iptables
+      tags: [setup, firewall]
+      ansible.builtin.iptables:
+        chain: INPUT
+        protocol: tcp
+        destination_port: "80"
+        jump: ACCEPT
+        action: insert
+        rule_num: "5"
+        comment: "TechStore HTTP"
+
+    - name: Open HTTPS port 443 in iptables
+      tags: [setup, firewall]
+      ansible.builtin.iptables:
+        chain: INPUT
+        protocol: tcp
+        destination_port: "443"
+        jump: ACCEPT
+        action: insert
+        rule_num: "6"
+        comment: "TechStore HTTPS"
+
+    - name: Install iptables-persistent for rule persistence
+      tags: [setup, firewall]
+      ansible.builtin.apt:
+        name: iptables-persistent
+        state: present
+      environment:
+        DEBIAN_FRONTEND: noninteractive
+
+    - name: Save iptables rules
+      tags: [setup, firewall]
+      ansible.builtin.command: netfilter-persistent save
+      changed_when: true
+
     # ═══════════════════════════════════════════════════════════════════════
     # DEPLOY — Clone repo, generate .env, docker compose up
     # ═══════════════════════════════════════════════════════════════════════
