--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -55,6 +55,8 @@ all:
           ansible_host: 129.213.145.236
           ansible_user: ubuntu
           ansible_ssh_private_key_file: ~/.ssh/oci_test
+          domain: prod2.eonsclover.com
+          ssl_mode: full_strict
           app_branch: main
           # Optional overrides per host:
           # docker_pg_password: my_secure_password
