--- a/ansible/playbook-docker.yml
+++ b/ansible/playbook-docker.yml
@@ -126,6 +126,53 @@
       changed_when: true
 
     # ═══════════════════════════════════════════════════════════════════════
+    # SSL — Cloudflare Origin Certificate (when ssl_mode == 'full_strict')
+    # ═══════════════════════════════════════════════════════════════════════
+
+    - name: Create SSL certificate directory
+      tags: [setup, deploy, ssl]
+      ansible.builtin.file:
+        path: "{{ ssl_cert_dir }}"
+        state: directory
+        owner: root
+        group: root
+        mode: "0700"
+      when: ssl_mode | default('flexible') == 'full_strict'
+
+    - name: Deploy Origin Certificate (wildcard *.eonsclover.com)
+      tags: [setup, deploy, ssl]
+      ansible.builtin.copy:
+        src: "{{ cf_origin_cert_file }}"
+        dest: "{{ ssl_cert_path }}"
+        owner: root
+        group: root
+        mode: "0644"
+      when: ssl_mode | default('flexible') == 'full_strict' and cf_origin_cert_file is defined
+
+    - name: Deploy Origin Certificate Key
+      tags: [setup, deploy, ssl]
+      ansible.builtin.copy:
+        src: "{{ cf_origin_key_file }}"
+        dest: "{{ ssl_key_path }}"
+        owner: root
+        group: root
+        mode: "0600"
+      when: ssl_mode | default('flexible') == 'full_strict' and cf_origin_key_file is defined
+
+    - name: Check if SSL certs already exist on server
+      tags: [deploy, ssl]
+      ansible.builtin.stat:
+        path: "{{ ssl_cert_path }}"
+      register: ssl_cert_exists
+      when: ssl_mode | default('flexible') == 'full_strict'
+
+    - name: Validate SSL certificate
+      tags: [deploy, ssl]
+      ansible.builtin.command: openssl x509 -in {{ ssl_cert_path }} -noout -subject
+      changed_when: false
+      when: ssl_mode | default('flexible') == 'full_strict' and (ssl_cert_exists.stat.exists | default(false))
+
+    # ═══════════════════════════════════════════════════════════════════════
     # DEPLOY — Clone repo, generate .env, docker compose up
     # ═══════════════════════════════════════════════════════════════════════
 
@@ -176,6 +223,38 @@
         jwt_secret: "{{ jwt_secret_generated.stdout }}"
       when: not env_file.stat.exists
 
+    # ── Render Nginx proxy config from template ─────────────
+    # Overwrites the static docker/nginx-proxy.conf with the
+    # Jinja2 version (adds SSL when ssl_mode == 'full_strict').
+    - name: Deploy Nginx proxy config (Docker)
+      tags: [deploy, update, ssl]
+      ansible.builtin.template:
+        src: templates/nginx-docker-proxy.conf.j2
+        dest: "{{ app_path }}/docker/nginx-proxy.conf"
+        owner: "{{ deploy_user }}"
+        group: "{{ deploy_group }}"
+        mode: "0644"
+
+    # ── Patch docker-compose.yml for SSL port + cert mount ─
+    # lineinfile with insertafter is idempotent (no duplicates).
+    - name: Expose port 443 on proxy container
+      tags: [deploy, update, ssl]
+      ansible.builtin.lineinfile:
+        path: "{{ app_path }}/docker-compose.yml"
+        insertafter: '"80:80"'
+        line: '      - "443:443"'
+        state: present
+      when: ssl_mode | default('flexible') == 'full_strict'
+
+    - name: Mount SSL certs volume into proxy container
+      tags: [deploy, update, ssl]
+      ansible.builtin.lineinfile:
+        path: "{{ app_path }}/docker-compose.yml"
+        insertafter: 'nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro'
+        line: '      - /etc/ssl/cloudflare:/etc/ssl/cloudflare:ro'
+        state: present
+      when: ssl_mode | default('flexible') == 'full_strict'
+
     # ── Build & start containers ──────────────────────────
     - name: Build and start Docker Compose stack
       tags: [deploy, update]
@@ -221,16 +300,29 @@
       until: api_check.status == 200
 
     # ── Health check: frontend serving SPA ────────────────
-    - name: Wait for frontend to respond
+    - name: Wait for frontend to respond (HTTP)
       tags: [deploy, update, verify]
       ansible.builtin.uri:
         url: "http://127.0.0.1:80/"
         method: GET
-        status_code: [200]
+        status_code: [200, 301]
       register: frontend_check
       retries: 5
       delay: 3
-      until: frontend_check.status == 200
+      until: frontend_check.status in [200, 301]
+
+    - name: Wait for HTTPS to respond
+      tags: [deploy, update, verify]
+      ansible.builtin.uri:
+        url: "https://127.0.0.1:443/"
+        method: GET
+        status_code: [200]
+        validate_certs: false
+      register: https_check
+      retries: 5
+      delay: 3
+      until: https_check.status == 200
+      when: ssl_mode | default('flexible') == 'full_strict'
 
     # ── Display result ────────────────────────────────────
     - name: Deployment summary
@@ -239,8 +331,9 @@
         msg: |
           ✅ {{ app_name }} deployed successfully (Docker mode)!
 
-          App:        http://{{ ansible_host }}
-          API:        http://{{ ansible_host }}/api/products
+          App:        {{ 'https' if ssl_mode | default('flexible') == 'full_strict' else 'http' }}://{{ domain | default(ansible_host) }}
+          API:        {{ 'https' if ssl_mode | default('flexible') == 'full_strict' else 'http' }}://{{ domain | default(ansible_host) }}/api/products
+          SSL:        {{ ssl_mode | default('flexible') }}
           Containers: 4 (database, backend, frontend, proxy)
 
           Useful commands (SSH into server):
